Update README with test workflow badges and other changes